@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-29T01:12:43Z",
-  "count_outdated" : 2843,
-  "uniques_outdated" : 907,
+  "timestamp" : "2024-10-31T01:12:20Z",
+  "count_outdated" : 2844,
+  "uniques_outdated" : 908,
   "count" : 2860,
   "uniques" : 913,
   "views" : [
-    {
-      "timestamp": "2024-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-17T00:00:00Z",
       "count": 1,
